autonomie/static/css/main.css
/* ... */
.inline-element {
  display: inline-block; }

textarea.tinymce {
  height: 400px; }

ul.form-tabs li.error a {
  color: #b94a48; }

.form-row {
  padding-bottom: 4px; }

.form-row select, .form-row input {
  width: 100%; }

.form-row input[type=radio], .form-row input[type=checkbox] {
  width: 15px; }

.accordion-heading a {
  color: #555; }

.accordion-body.in:hover {
  overflow: visible; }

/* Bootstrap overrides */
.input-group input:focus {
  z-index: auto; }

.navbar-form button, .navbar-form input, .navbar-form select {
  margin-top: 5px;
  float: left;
  margin-right: 3px; }

.nav-tabs > li.active > a {
  font-weight: bold;
  text-decoration: underline; }

header .navbar {
  margin-bottom: 0px; }

header .navbar li:hover {
  background-color: #3c3c3c; }

header .navbar {
  padding-left: 15%; }

header .navbar .nav > li > a {
  padding: 10px 5px;
  margin: 0px 10px; }

.tab-content {
  padding: 0px 10px; }

.tab-pane {
  padding: 10px 10px; }

.clickable-row {
  cursor: pointer; }

.form-inline .form-group {
  vertical-align: top;
  margin-bottom: 3px; }

.modal input[name=altdate], .modal input[name=date] {
  z-index: 1100;
  position: relative; }

/* Affichage html de la sortie pdf des documents */
.task_view img {
  max-width: 100%;
  height: auto; }

/* Affichage d'un select2 */
.form-control.select2-container {
  height: auto !important;
  padding: 0; }

/* Affichage d'un loader */
#loading-box {
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: 1500;
  opacity: 0.7;
  background-color: #000;
  font-size: 8em;
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
  color: #fff;
  text-align: center;
  width: 100%;
  height: 100%; }
  #loading-box i {
    position: absolute;
    top: 45%; }

/* Jstree */
.jstree {
  display: inline-block; }

/* Custom close button class */
.large-close {
  font-size: 40px;
  opacity: 0.4; }

/* Project view */
.project-view .header {
  border-bottom: 1px solid #eee;
  margin-bottom: 15px;
  padding-bottom: 10px;
  padding-top: 10px;
  background-color: #FFF; }

.project-view .header h3 {
  padding-right: 10px;
  font-weight: 100;
  margin: 10px 0px 5px 0px; }

.project-view .header a {
  margin-top: 5px; }

/* Rendez-vous */
.activity-view #edition_form, .activity-view #next_activity_form_container {
  background-color: #fff;
  padding: 10px 15px; }

.activity-view p {
  margin-bottom: 2px; }

.activity-view h3 {
  border-bottom: 1px solid #dcdcdc;
  margin-bottom: 10px;
  padding-bottom: 10px; }

/* Responsive tags handling */
.nav-tabs {
  min-width: 600px; }

.nav-tabs-responsive {
  overflow: auto; }

/* Task lists css */
.status-table td.status-td {
  width: 16px; }

.status-table .signed-status-signed, .status-table .justified-True:not(.status-valid), .status-table .job-planned {
  background-color: #7db9fd; }
  .status-table .signed-status-signed .status-td, .status-table .justified-True:not(.status-valid) .status-td, .status-table .job-planned .status-td {
    background-color: #238bff; }

.status-table .signed-status-aborted, .status-table .tolate-True, .status-table .status-wait:not(.justified-True), .status-table .job-failed, .status-table .activity-status-cancelled, .status-table .operation-associated-False {
  background-color: #f9aaaa !important; }
  .status-table .signed-status-aborted a:not(.btn), .status-table .tolate-True a:not(.btn), .status-table .status-wait:not(.justified-True) a:not(.btn), .status-table .job-failed a:not(.btn), .status-table .activity-status-cancelled a:not(.btn), .status-table .operation-associated-False a:not(.btn) {
    text-transform: uppercase;
    text-decoration: underline; }
  .status-table .signed-status-aborted .status-td, .status-table .tolate-True .status-td, .status-table .status-wait:not(.justified-True) .status-td, .status-table .job-failed .status-td, .status-table .activity-status-cancelled .status-td, .status-table .operation-associated-False .status-td {
    background-color: #C43C35 !important; }

.status-table .geninv-True, .status-table .paid-status-resulted, .status-table .job-completed, .status-table .activity-status-closed, .status-table .operation-associated-True {
  background-color: #c4ffaa; }
  .status-table .geninv-True .status-td, .status-table .paid-status-resulted .status-td, .status-table .job-completed .status-td, .status-table .activity-status-closed .status-td, .status-table .operation-associated-True .status-td {
    background-color: #baff87; }

.status-table .paid-status-paid {
  background-color: #ffb266; }
  .status-table .paid-status-paid .status-td {
    background-color: #ffb266; }

.status-header.signed-status-signed, .status-header.justified-True:not(.status-valid), .status-header.job-planned {
  background-color: #5bc0de;
  color: #fff; }

.status-header.signed-status-aborted, .status-header.tolate-True, .status-header.status-wait:not(.justified-True), .status-header.job-failed, .status-header.status-invalid, .status-header.activity-status-cancelled {
  background-color: #d9534f !important;
  color: #fff; }

.status-header.geninv-True, .status-header.paid-status-resulted, .status-header.job-completed, .status-header.activity-status-closed {
  background-color: #5cb85c;
  color: #fff; }

.status-header.paid-status-paid {
  background-color: #f0ad4e;
  color: #fff; }

.table .tr_highlighted {
  font-weight: bold;
  background-color: #efffef !important; }

.overlay {
  background-color: #fff;
  top: 0px;
  left: 0px;
  opacity: 1;
  height: 100%;
  width: 100%;
  position: fixed;
  margin: 0;
  z-index: 1101; }
  .overlay .overlay-content {
    opacity: 1;
    position: relative;
    top: 20vh; }

.modal-content {
  border-radius: 0px; }

.login-dialog .modal-body .icon {
  font-size: 100px;
  color: #999;
  text-align: center; }

.modal-overlay {
  background-color: rgba(5, 5, 5, 0.7); }

a.link {
  text-decoration: underline; }

